# cmake-SO-question-main

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  TestLib.cpp  TestLib.hpp  testApp.cpp
src/app/testApp/: CMakeLists.txt  testApp.cpp
src/lib/TestLib/: CMakeLists.txt  TestLib.cpp
